config/nginx-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    app: nginx
    deploymentconfig: nginx
  strategy:
    resources:
      limits:
        cpu: '1'
        memory: 4096Mi
      requests:
        cpu: 50m
        memory: 512Mi
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: nginx
        deploymentconfig: nginx
    spec:
      containers:
      - env:
        - name: WIRECLOUD_SERVER
          value: wirecloud.fiware-certification.svc
        image: flopez/nginx:latest
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 4096Mi
          requests:
            cpu: 50m
            memory: 512Mi
          volumeMounts:
            - name: nginx-claim1
              mountPath: /var/www/static
              readOnly: true
        volumes:
            - name: nginx-claim1
              persistentVolumeClaim:
                claimName: wirecloud-claim2
                readOnly: true
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - nginx
      from:
        kind: ImageStreamTag
        name: nginx:latest
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
