config/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - name: 90-tcp
    port: 90
    protocol: TCP
    targetPort: 90
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nginx
    deploymentconfig: nginx
status:
  loadBalancer: {}
