config/nginx-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: fiware-certification
  resourceVersion: '22525322'
spec:
  host: nginx-fiware-certification.apps.iot.antel.com.uy
  port:
    targetPort: 90
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
status: {}
